# satellite-peripher-driver

./: .gitignore  CMakeLists.txt  INTERVIEW_NOTES.md  QUICK_DEMO.md  README.md
docs/: architecture.md  register_map.md
include/: bus.h  mock_bus.h  sat_sensor.h
src/: main.c  mock_bus.c  sat_sensor.c
tests/: test_sat_sensor.c
tools/: run_checks.py
